# poc-sdd

./: .gitignore  CLAUDE.md  PLAN.md  pnpm-lock.yaml
.claude/skills/implement-change/: SKILL.md
.claude/skills/plan-change/: SKILL.md
.github/workflows/: ci.yml  claude.yml  deploy.yml
.moon/: toolchain.yml  workspace.yml
apps/api/: .gitignore  Makefile  deploy.sh  moon.yml  pyproject.toml
apps/api/src/: db.py  main.py  todo_list.py
apps/api/tests/: test_health.py  test_todo_list.py
apps/web/: .gitignore  Makefile  deploy.sh  moon.yml  next.config.ts  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/_components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
apps/web/src/lib/: api.ts
specs/: project.md
specs/_templates/: spec.md
specs/_templates/change/: design.md  proposal.md  tasks.md
specs/changes/2026-04-20-allow-delete-todo/: design.md  proposal.md  tasks.md
specs/changes/2026-04-20-initial-todo-list/: design.md  proposal.md  tasks.md
specs/changes/2026-04-20-toggle-task-done/: design.md  proposal.md  tasks.md
specs/specs/api/todo-list/: spec.md
specs/specs/web/todo-list/: spec.md
